--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url: jdbc:mysql://localhost:3306/game_store_db?useSSL=false&serverTimezone=US/Eastern&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username: root
-spring.datasource.password: chau
+spring.datasource.password: sql21
 spring.jpa.hibernate.ddl-auto: update
 #spring.datasource.driver-class-name: com.mysql.jdbc.Driver
